<resources>
    <string name="app_name">Game1A2B</string>
    <string name="Title">1A2B</string>
    <string name="StartText">START</string>
    <string name="HistoryText">HISTORY</string>
    <string name="GuessNumberHint">GuessNumber</string>
    <string name="guess">Guess</string>
    <string name="next_game">Next Game</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>